# Baru

./: CloudStreamApp.kt  discoverium.yml  local.properties
.circleci/: config.yml
.github/workflows/: buat_apk.yml  buat_apk_obfuscation.yml  buat_apk_sign.yml  buat_apk_xor.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml  AndroidManifestxs.xml  CloudStreamApp.kt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  signature_check.cpp  xsecure.cpp
app/src/main/java/com/lagradost/cloudstream3/: App.kt  CampaignPopupManager.kt  CloudStreamApp.kt  CommonActivity.kt  MainActivity.kt  PremiumDialogManager.kt  PremiumManager.kt  RepoProtector.kt  SignatureUtils.kt  SplashActivity.kt
app/src/main/java/com/lagradost/cloudstream3/network/: RequestsHelper.kt
app/src/main/java/com/lagradost/cloudstream3/plugins/: PluginManager.kt
app/src/main/java/com/lagradost/cloudstream3/services/: PackageInstallerService.kt  SubscriptionWorkManager.kt
app/src/main/java/com/lagradost/cloudstream3/ui/: BaseAdapter.kt  (+1 more)
app/src/main/res/layout/: activity_splash.xml  fragment_home.xml  fragment_player.xml  fragment_player_tv.xml  fragment_search.xml  fragment_search_tv.xml  main_settings.xml  search_result_grid.xml  search_result_grid_expanded.xml  trailer_custom_layout.xml
app/src/main/res/values/: donottranslate-strings.xml  strings.xml  styles.xml
app/src/main/res/values-b+in/: strings.xml
app/src/main/res/xml/: network_security_config.xml  settings_general.xml  settings_ui.xml
docs/: share.html
gradle/wrapper/: gradle-wrapper.properties
(+39 files in other folders)
